<resources>
    <string name="app_name">SmartWatt App</string>
    <string name="redirect_text_sign">¿Es tu primera vez? <u>Registrate</u></string>
    <string name="title_smartwatt">SmartWatt</string>
    <string name="text_slogan">La aplicación que ahorra la energía de tu hogar</string>
    <string name="subtitle1">Estadísticas de hoy</string>
    <string name="consumo_en_tiempo_real">Consumo en tiempo real</string>
    <string name="text_consumo">1 kWh</string>
    <string name="costos_consumo">Costo incurrido: $4.560</string>
    <string name="text_voltaje">Voltaje</string>
    <string name="consumo_voltaje">210.5 V</string>
    <string name="text_corriente">Corriente</string>
    <string name="consumo_corriente">6.8 A</string>
    <string name="text_potencia">Potencia</string>
    <string name="consumo_potencia">220.7 W</string>
    <string name="text_ajustes">Ajustes</string>
    <string name="text_analisis">Análisis</string>
    <string name="text_panel">Panel</string>
    <string name="link_sign">Registrarse</string>
    <string name="password_hint_sign">Contraseña</string>
    <string name="password_hint">Contraseña</string>
    <string name="medidor_hint_sign">Codigo de medidor</string>
    <string name="medidor_title_sign">Codigo medidor</string>
    <string name="email_hint_sign">Correo electrónico</string>
    <string name="email_hint">Correo electrónico</string>
    <string name="name_hint_sign">Nombre</string>
    <string name="login_title_text">Inicio de sesión</string>
    <string name="login_button_text">Iniciar sesión</string>
    <string name="return_panel_conf">Volver</string>
    <string name="return_panel_home">Salir</string>
    <string name="title_conf">Ajustes</string>
    <string name="title_home">Menu Principal</string>
    <string name="dark_mode_text">Modo Oscuro</string>
    <string name="consume_alert">Alertas de consumo</string>
    <string name="ahorro_energia_op">Modo ahorro de energía</string>
    <string name="lenguage_op">Idiomas</string>
    <string name="consumido_en_el_mes">Consumido en el mes</string>
    <string name="estatistics">Estadísticas</string>
    <string name="text_consumo_mensual">384 kWh</string>
    <string name="text_grafica">Gráfica de consumo</string>
    <string name="descripcion_grafica">grafica de consumo</string>
    <string name="a_pagar">A pagar</string>
    <string name="intro_app">¡Bienvenido a SmartWatt, la app que te permite controlar tus gastos de luz en tiempo real! 🌟</string>
    <string name="body1_app">
        ¿Te imaginas saber exactamente cuánta energía consumes al instante y cuánto dinero estás
        gastando sin esperar la factura? Con SmartWatt, tienes el poder de monitorear tu consumo
        eléctrico desde la comodidad de tu teléfono, ayudándote a ahorrar de manera inteligente.
    </string>
    <string name="body2_app">
        Visualiza gráficos dinámicos, recibe alertas personalizadas y descubre qué electrodomésticos
        están inflando tu factura. Empieza a tomar decisiones más sostenibles hoy mismo con la
        información precisa que SmartWatt te brinda al instante. ¡Tu energía, bajo control! ⚡📊
    </string>
    <string name="login">Acceder</string>
    <string name="sign">Registrarse</string>
    <string name="back">Volver</string>
    <string name="gastos">Costos incurridos</string>
    <string name="monto_pago">$ 56.000 CLP</string>
    <string name="limit_month">Límite mensual establecido</string>
    <string name="wht_month">400 kWh</string>
    <string name="icon_payment_desc">icono que hace referencia a el total a pagar</string>
    <string name="icon_help">icono de ayuda o entrega de información</string>
    <string name="icon_limit_user">icono que hace referencia al limite de consumo establecido por el usuario</string>
    <string name="icon_back_desc">icono que le permite al usuario regresar en una vista</string>
    <string name="btn_back">Regresar</string>
    <string name="inicio_desc_background">fondo de inicio de sesión</string>
    <string name="create_account">Creación de cuentas</string>
    <string name="usuarios_registrados">Usuarios Registrados</string>
    <string name="email">Email</string>
    <string name="nombre">Nombre</string>
    <string name="code">Código de medidor</string>
    <string name="password">Contraseña</string>
    <string name="tittle_users">Usuarios Registrados</string>
    <string name="button_edit">Editar</string>
    <string name="button_eliminar">Eliminar</string>
    <string name="button_active_desactivate">Desactivar / Activar</string>
</resources>