<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/fondo1"
    android:padding="20dp"
    >

    <ImageView
        android:id="@+id/icon_electric"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="48dp"
        android:layout_weight="1"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_logo_smartwatt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/title_smartwatt"
        android:textSize="40sp"
        android:textColor="@color/gray_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/icon_electric"
        />

    <TextView
        android:id="@+id/introapp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:paddingHorizontal="30dp"
        android:paddingVertical="10dp"
        android:text="@string/intro_app"
        android:textColor="@color/gray_text"
        android:textSize="15sp"
        android:gravity="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_app" />

    <TextView
        android:id="@+id/p1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/body1_app"
        android:textColor="@color/gray_text"
        android:layout_marginTop="10dp"
        android:paddingHorizontal="25dp"
        android:paddingVertical="10dp"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/introapp"
        />
    <TextView
        android:id="@+id/p2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/body2_app"
        android:textColor="@color/gray_text"
        android:layout_marginTop="10dp"
        android:paddingHorizontal="25dp"
        android:paddingVertical="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/p1"
        />

    <Button
        android:id="@+id/logbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:backgroundTint="@color/buttons_login_sign_color"
        android:text="@string/login"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@id/siginbtn"
        app:layout_constraintStart_toStartOf="@id/p2"
        app:layout_constraintTop_toBottomOf="@id/p2" />

    <Button
        app:layout_constraintEnd_toEndOf="@id/p2"
        app:layout_constraintStart_toEndOf="@id/logbtn"
        app:layout_constraintTop_toBottomOf="@id/p2"
        android:id="@+id/siginbtn"
        android:layout_marginTop="60dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign"
        android:textColor="@color/white"
        android:backgroundTint="@color/buttons_login_sign_color"
        />


</androidx.constraintlayout.widget.ConstraintLayout>