<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_background"
    tools:context=".MainActivity"
    >

    <!-- Logo y Título de la app -->
    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:drawablePadding="10dp"
        android:gravity="start|center_vertical"
        android:text="@string/title_smartwatt"
        android:textColor="@color/gray_text"
        android:textSize="32sp"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/ic_logo_smartwatt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Descripción -->
    <TextView
        android:id="@+id/tv_subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/text_slogan"
        android:textColor="@color/gray_text"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <!-- Subtitulo de estadísticas actuales -->
    <TextView
        android:id="@+id/tv_subtitle1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/subtitle1"
        android:textColor="@color/gray_text"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_subtitle" />

    <!-- Tarjeta de consumo en tiempo real -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_consumo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/card_background"
        app:cardCornerRadius="12dp"
        app:cardElevation="4dp"
        app:layout_constraintTop_toBottomOf="@id/tv_subtitle1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/tv_consumo_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/consumo_en_tiempo_real"
                android:textColor="@color/gray_text"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_consumo_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:text="@string/text_consumo"
                android:textColor="@color/gray_text"
                android:textSize="22sp"
                android:textStyle="bold"
                android:layout_marginTop="8dp"
                android:gravity="center"
                app:drawableStartCompat="@drawable/ic_graphic" />

            <TextView
                android:id="@+id/tv_consumo_cost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/costos_consumo"
                android:textColor="@color/gray_text"
                android:textSize="14sp"
                android:layout_marginTop="4dp" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <!-- Tarjeta de Voltaje -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_voltage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/card_background"
        app:cardCornerRadius="20dp"
        app:cardElevation="4dp"
        app:layout_constraintTop_toBottomOf="@id/card_consumo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/card_current"
        app:layout_constraintWidth_percent="0.45"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="16dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="16dp"
            android:paddingHorizontal="8dp">

            <TextView
                android:id="@+id/tv_voltage_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:drawablePadding="8dp"
                android:text="@string/text_voltaje"
                android:textColor="@color/gray_text"
                android:textSize="14sp"
                app:drawableStartCompat="@drawable/ic_voltaje" />

            <TextView
                android:id="@+id/tv_voltage_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:text="@string/consumo_voltaje"
                android:textColor="@color/gray_text"
                android:textSize="28sp"
                android:textStyle="bold" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <!-- Tarjeta de Corriente -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_current"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/card_background"
        app:cardCornerRadius="20dp"
        app:cardElevation="4dp"
        app:layout_constraintTop_toBottomOf="@id/card_consumo"
        app:layout_constraintStart_toEndOf="@id/card_voltage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.45"
        android:layout_marginTop="20dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="16dp"
            android:paddingHorizontal="8dp">

            <TextView
                android:id="@+id/tv_current_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:drawablePadding="8dp"
                android:text="@string/text_corriente"
                android:textColor="@color/gray_text"
                android:textSize="14sp"
                app:drawableStartCompat="@drawable/ic_corriente" />

            <TextView
                android:id="@+id/tv_current_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/consumo_corriente"
                android:textColor="@color/gray_text"
                android:textSize="28sp"
                android:textStyle="bold"
                android:layout_marginTop="8dp"
                android:layout_gravity="center" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <!-- Tarjeta de Potencia -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_power"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/card_background"
        app:cardCornerRadius="20dp"
        app:cardElevation="4dp"
        app:layout_constraintTop_toBottomOf="@id/card_voltage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_power_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:drawablePadding="8dp"
                android:text="@string/text_potencia"
                android:textColor="@color/gray_text"
                android:textSize="14sp"
                app:drawableStartCompat="@drawable/ic_potencia" />

            <TextView
                android:id="@+id/tv_power_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/consumo_potencia"
                android:textColor="@color/gray_text"
                android:textSize="28sp"
                android:textStyle="bold" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <!-- Barra de navegación inferior -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/navigation_bar_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:menu="@menu/bottom_nav_menu"
        app:itemIconTint="@color/button_nav_color"
        app:itemIconSize="24dp"
        android:elevation="10dp"
        app:itemTextColor="@color/gray_text"
        app:itemRippleColor="@color/bottom_nav_ripple_color"
        app:itemActiveIndicatorStyle="@style/App.CustomActiveIndicator"
        app:labelVisibilityMode="labeled"
        />
</androidx.constraintlayout.widget.ConstraintLayout>